RESOLVED FIXED113071
REGRESSION (r146272): layout issues for flex boxes that have -webkit-flex-wrap: wrap
https://bugs.webkit.org/show_bug.cgi?id=113071
Summary REGRESSION (r146272): layout issues for flex boxes that have -webkit-flex-wra...
Timothy Hatcher
Reported 2013-03-22 09:12:26 PDT
Created attachment 194563 [details] Test Case The fix for bug 112652 causes layout issues for flex boxes that have -webkit-flex-wrap: wrap applied. See attached test case. This broke some layout in the Safari Web Inspector. <rdar://problem/13468541>
Attachments
Test Case (237 bytes, text/html)
2013-03-22 09:12 PDT, Timothy Hatcher
no flags
Issues in the Safari Web Inspector (73.94 KB, image/png)
2013-03-22 09:13 PDT, Timothy Hatcher
no flags
Patch (4.55 KB, patch)
2013-03-22 15:08 PDT, Tony Chang
no flags
Timothy Hatcher
Comment 1 2013-03-22 09:13:03 PDT
Created attachment 194564 [details] Issues in the Safari Web Inspector
Timothy Hatcher
Comment 2 2013-03-22 09:24:47 PDT
*** Bug 113068 has been marked as a duplicate of this bug. ***
Tony Chang
Comment 3 2013-03-22 10:40:09 PDT
What do you expect to happen in the test case?
Tony Chang
Comment 4 2013-03-22 10:41:26 PDT
(In reply to comment #3) > What do you expect to happen in the test case? Oh, I see, the right side of the boxes is too wide.
Timothy Hatcher
Comment 5 2013-03-22 10:42:00 PDT
(In reply to comment #4) > (In reply to comment #3) > > What do you expect to happen in the test case? > > Oh, I see, the right side of the boxes is too wide. Yes, sorry I didn't mention that up front.
Tony Chang
Comment 6 2013-03-22 10:47:22 PDT
This seems like a bug with nested multiline (wrapping) flexboxes. If I set display: block on the item divs, they properly size.
Tony Chang
Comment 7 2013-03-22 15:08:25 PDT
WebKit Review Bot
Comment 8 2013-03-22 17:01:09 PDT
Comment on attachment 194638 [details] Patch Clearing flags on attachment: 194638 Committed r146684: <http://trac.webkit.org/changeset/146684>
WebKit Review Bot
Comment 9 2013-03-22 17:01:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.