REGRESSION (r146272): layout issues for flex boxes that have -webkit-flex-wrap: wrap https://bugs.webkit.org/show_bug.cgi?id=113071

Reviewed by Ojan Vafai.

Source/WebCore:

The refactor in r139535 introduced this bug, where a variable name wasn't updated properly.
In combination with r146272, this bug became more visible when nesting multiline flexboxen.

Test: css3/flexbox/multiline-min-preferred-width.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::computeIntrinsicLogicalWidths): We want the width of the widest
flexitem, the value in m_minPreferredWidth isn't relevant. Also update the comment for max
preferred width.

LayoutTests:

* css3/flexbox/multiline-min-preferred-width-expected.txt: Added.
* css3/flexbox/multiline-min-preferred-width.html: Added.


Canonical link: https://commits.webkit.org/131453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146684 268f45cc-cd09-0410-ab3c-d52691b4dbfc